development/gitea/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
spec:
  serviceName: gitea
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: gitea
        image: gitea/gitea:1.12.6
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        command:
        - /bin/sh
        args:
        - "-c"
        - >
          envsubst < /configmap/app.ini > /etc/gitea/app.ini;
          echo "Config generation done, now starting gitea";
          exec gitea web --config /etc/gitea/app.ini
        ports:
        - name: http-gui
          containerPort: 3000
        - name: ssh-git
          containerPort: 3001
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config-template
          mountPath: /configmap
        - name: config-volume
          mountPath: /etc/gitea
        resources:
          limits:
            cpu: 1
            memory: 1.5Gi
          requests:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: http-gui
            scheme: HTTP
          initialDelaySeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http-gui
            scheme: HTTP
          initialDelaySeconds: 5
      volumes:
        - name: config-volume
          emptyDir: {}
        - name: config-template
          configMap:
            name: app-ini
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "1Gi"
      storageClassName: nfs-data
