development/gitea/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  type: ClusterIP
  ports:
  - name: http-gui
    port: 3000
    targetPort: 3000
